
* mozharness/test/device.py (DeviceMixin.disconnect_device):
    Added.

* mozharness/test/device.py (DeviceMixin.ping_device):
    Added auto_connect functionality.

* mozharness/test/device.py (DeviceMixin.check_device):
    Added auto_connect functionality.

* scripts/device_talosrunner.py (DeviceTalosRunner.pre_cleanup_device):
    Added, since I'll want to have a post_cleanup_device.

2011-10-26  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/errors.py:
    Added "error: protocol fault" to adb error list.

* scripts/device_talosrunner.py (DeviceTalosRunner.run_talos):
    Hacked the PATH for run_tests.py since talos calls python directly (bug 697535), which was breaking virtualenvs.

2011-10-10  Aki Sasaki  <aki@mozilla.com>
* configs/users/aki/tablet1.py:
    Fixed my web server IP.  I'd love to be able to figure this out without gacking on the VMWeb interface.
    Commented out device_port and device_ip since we're now detecting !

* mozharness/test/device.py (DeviceMixin.query_device_serial):
    Added TODO to adb connect to a specified IP:port if we're not connected.
    Fixed the device detection.

* scripts/device_talosrunner.py(DeviceTalosRunner.__init__):
    Re-added the run-talos action as a default.

* scripts/device_talosrunner.py(DeviceTalosRunner.install_app):
    Fixed the clear_device_proxy_flag.

2011-10-04  Aki Sasaki  <aki@mozilla.com>
* scripts/device_talosrunner.py:
    Added KNOWN_SUITES
    Added --talos-suite
    Added --tp-zip (needs support)
    Added _pre_config_lock to verify talos_suites in KNOWN_SUITES

* mozharness/test/device.py (DeviceMixin.query_device_serial):
    Added, to deal with multiple adb devices.
    Updated device.py and device_talosrunner.py adb calls to use it.

* mozharness/base/script.py (ShellMixin.get_output_from_command):
    Fixed log_level

* mozharness/base/script.py (BaseScript):
    Created the initial config dump (localconfig.json) in log_dir.